...
        name: "keys.openpgp.org",
        hostname: "keys.openpgp.org",
        protocol: .hkps
    )

    static let ubuntuKeyserver = KeyServerConfig(
        name: "Ubuntu Keyserver",
        hostname: "keyserver.ubuntu.com",
        protocol: .hkps
    )

    static let mitKeyserver = KeyServerConfig(
        name: "MIT PGP Keyserver",
...
